# folderReorg

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  kb.py  pyproject.toml  run.py  run.sh  scan_config.toml  status.py
chat_ui/: chat_ui.py
dashboard/: __init__.py  _common.py  dashboard.py  home.py  launch.sh
dashboard/pages/: 1_Status.py  2_Knowledge_Base.py  3_Pipeline.py  4_Chat.py
deployment/: deploy_folderReorg.sh  sync_folderReorg_ToServer.py
docker/: compose.app.yml
docker/app/: Dockerfile
docker/kb/: run_daily_reindex.sh
docker/qdrant/: docker-compose.yml
docs/: dashboard.md  docker.md  knowledge-base.md  pipeline-overview.md  run-on-aizh.md  setup.md  unattended-runs.md
kb/: chunk_embed.py  config.py  extract.py  extraction_cache.py  indexer.py  mount_nas.sh  query.py  scheduled.py  umount_nas.sh
review_ui/: review_ui.py
src/: config.py  depth_policy.py  exclusions.py  hierarchy.py  llm.py  naming.py  phase0_manifest.py  phase1_extract.py  phase1_inventory.py  phase1_lang_detect.py  phase2_cluster.py  phase2_embed.py  phase3_classify.py  phase5_execute.py  phase6_verify.py  shortcuts.py  translate_name.py
systemd/: folderreorg-kb-360f.service  folderreorg-kb-360f.timer  folderreorg-kb-personal.service  folderreorg-kb-personal.timer  folderreorg-kb.service  folderreorg-kb.timer
